// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders TimePicker/demo/basic.md correctly 1`] = `
<div
  class="arco-picker arco-picker-size-default"
  style="width:194px"
>
  <div
    class="arco-picker-input"
  >
    <input
      class="arco-picker-start-time"
      placeholder="请选择时间"
      value=""
    />
  </div>
  <div
    class="arco-picker-suffix"
  >
    <span
      class="arco-picker-suffix-icon"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-clock-circle"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="M24 14v10h9.5m8.5 0c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6s18 8.059 18 18Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`renders TimePicker/demo/control.md correctly 1`] = `
<div
  class="arco-picker arco-picker-size-default"
  style="width:194px"
>
  <div
    class="arco-picker-input"
  >
    <input
      class="arco-picker-start-time"
      placeholder="请选择时间"
      value=""
    />
  </div>
  <div
    class="arco-picker-suffix"
  >
    <span
      class="arco-picker-suffix-icon"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-clock-circle"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="M24 14v10h9.5m8.5 0c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6s18 8.059 18 18Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`renders TimePicker/demo/defaultValue.md correctly 1`] = `
<div>
  <div
    class="arco-picker arco-picker-size-default"
    style="width:194px;margin-right:24px;margin-bottom:24px"
  >
    <div
      class="arco-picker-input"
    >
      <input
        class="arco-picker-start-time"
        placeholder="请选择时间"
        value="18:24:23"
      />
    </div>
    <div
      class="arco-picker-suffix"
    >
      <span
        class="arco-icon-hover arco-picker-icon-hover arco-picker-clear-icon"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-close"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"
          />
        </svg>
      </span>
      <span
        class="arco-picker-suffix-icon"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-clock-circle"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M24 14v10h9.5m8.5 0c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6s18 8.059 18 18Z"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    class="arco-picker arco-picker-range arco-picker-size-default"
    style="width:252px;margin-bottom:24px"
  >
    <div
      class="arco-picker-input arco-picker-input-active"
    >
      <input
        placeholder="开始时间"
        value="09:24:53"
      />
    </div>
    <span
      class="arco-picker-separator"
    >
      -
    </span>
    <div
      class="arco-picker-input"
    >
      <input
        placeholder="结束时间"
        value="18:44:33"
      />
    </div>
    <div
      class="arco-picker-suffix"
    >
      <span
        class="arco-icon-hover arco-picker-icon-hover arco-picker-clear-icon"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-close"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"
          />
        </svg>
      </span>
      <span
        class="arco-picker-suffix-icon"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-clock-circle"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M24 14v10h9.5m8.5 0c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6s18 8.059 18 18Z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders TimePicker/demo/disableConfirm.md correctly 1`] = `
<div>
  <div
    class="arco-picker arco-picker-size-default"
    style="width:194px;margin:0 24px 24px 0"
  >
    <div
      class="arco-picker-input"
    >
      <input
        class="arco-picker-start-time"
        placeholder="请选择时间"
        value=""
      />
    </div>
    <div
      class="arco-picker-suffix"
    >
      <span
        class="arco-picker-suffix-icon"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-clock-circle"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M24 14v10h9.5m8.5 0c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6s18 8.059 18 18Z"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    class="arco-picker arco-picker-range arco-picker-size-default"
    style="width:252px;margin:0 24px 24px 0"
  >
    <div
      class="arco-picker-input arco-picker-input-active"
    >
      <input
        placeholder="开始时间"
        value=""
      />
    </div>
    <span
      class="arco-picker-separator"
    >
      -
    </span>
    <div
      class="arco-picker-input"
    >
      <input
        placeholder="结束时间"
        value=""
      />
    </div>
    <div
      class="arco-picker-suffix"
    >
      <span
        class="arco-picker-suffix-icon"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-clock-circle"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M24 14v10h9.5m8.5 0c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6s18 8.059 18 18Z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders TimePicker/demo/disabled.md correctly 1`] = `
<div>
  <div
    class="arco-picker arco-picker-size-default arco-picker-disabled"
    style="margin:0 24px 24px 0"
  >
    <div
      class="arco-picker-input"
    >
      <input
        class="arco-picker-start-time"
        disabled=""
        placeholder="请选择时间"
        value=""
      />
    </div>
    <div
      class="arco-picker-suffix"
    >
      <span
        class="arco-picker-suffix-icon"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-clock-circle"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M24 14v10h9.5m8.5 0c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6s18 8.059 18 18Z"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    class="arco-picker arco-picker-range arco-picker-size-default arco-picker-disabled"
    style="width:252px;margin:0 24px 24px 0"
  >
    <div
      class="arco-picker-input arco-picker-input-active"
    >
      <input
        disabled=""
        placeholder="开始时间"
        value=""
      />
    </div>
    <span
      class="arco-picker-separator"
    >
      -
    </span>
    <div
      class="arco-picker-input"
    >
      <input
        disabled=""
        placeholder="结束时间"
        value=""
      />
    </div>
    <div
      class="arco-picker-suffix"
    >
      <span
        class="arco-picker-suffix-icon"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-clock-circle"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M24 14v10h9.5m8.5 0c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6s18 8.059 18 18Z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders TimePicker/demo/disabledTime.md correctly 1`] = `
<div>
  <div
    class="arco-picker arco-picker-size-default"
    style="width:194px;margin:0 24px 24px 0"
  >
    <div
      class="arco-picker-input"
    >
      <input
        class="arco-picker-start-time"
        placeholder="请选择时间"
        value=""
      />
    </div>
    <div
      class="arco-picker-suffix"
    >
      <span
        class="arco-picker-suffix-icon"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-clock-circle"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M24 14v10h9.5m8.5 0c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6s18 8.059 18 18Z"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    class="arco-picker arco-picker-range arco-picker-size-default"
    style="width:252px;margin:0 24px 24px 0"
  >
    <div
      class="arco-picker-input arco-picker-input-active"
    >
      <input
        placeholder="开始时间"
        value=""
      />
    </div>
    <span
      class="arco-picker-separator"
    >
      -
    </span>
    <div
      class="arco-picker-input"
    >
      <input
        placeholder="结束时间"
        value=""
      />
    </div>
    <div
      class="arco-picker-suffix"
    >
      <span
        class="arco-picker-suffix-icon"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-clock-circle"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M24 14v10h9.5m8.5 0c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6s18 8.059 18 18Z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders TimePicker/demo/extra.md correctly 1`] = `
<div
  class="arco-picker arco-picker-size-default"
  style="width:194px"
>
  <div
    class="arco-picker-input"
  >
    <input
      class="arco-picker-start-time"
      placeholder="请选择时间"
      value=""
    />
  </div>
  <div
    class="arco-picker-suffix"
  >
    <span
      class="arco-picker-suffix-icon"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-clock-circle"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="M24 14v10h9.5m8.5 0c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6s18 8.059 18 18Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`renders TimePicker/demo/format.md correctly 1`] = `
<div
  class="arco-picker arco-picker-size-default"
  style="width:130px"
>
  <div
    class="arco-picker-input"
  >
    <input
      class="arco-picker-start-time"
      placeholder="请选择时间"
      value="09:24"
    />
  </div>
  <div
    class="arco-picker-suffix"
  >
    <span
      class="arco-icon-hover arco-picker-icon-hover arco-picker-clear-icon"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-close"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"
        />
      </svg>
    </span>
    <span
      class="arco-picker-suffix-icon"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-clock-circle"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="M24 14v10h9.5m8.5 0c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6s18 8.059 18 18Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`renders TimePicker/demo/prefix.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center"
>
  <div
    class="arco-space-item"
    style="margin-right:8px"
  >
    <div
      class="arco-picker arco-picker-size-default arco-picker-has-prefix"
      style="width:200px"
    >
      <div
        class="arco-picker-prefix"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-info-circle"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M24 20v14m0-16v-4m18 10c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6s18 8.059 18 18Z"
          />
        </svg>
      </div>
      <div
        class="arco-picker-input"
      >
        <input
          class="arco-picker-start-time"
          placeholder="请选择时间"
          value=""
        />
      </div>
      <div
        class="arco-picker-suffix"
      >
        <span
          class="arco-picker-suffix-icon"
        >
          <svg
            aria-hidden="true"
            class="arco-icon arco-icon-clock-circle"
            fill="none"
            focusable="false"
            stroke="currentColor"
            stroke-width="4"
            viewBox="0 0 48 48"
          >
            <path
              d="M24 14v10h9.5m8.5 0c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6s18 8.059 18 18Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="arco-space-item"
  >
    <div
      class="arco-picker arco-picker-range arco-picker-size-default arco-picker-has-prefix"
      style="width:250px"
    >
      <div
        class="arco-picker-prefix"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-info-circle"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M24 20v14m0-16v-4m18 10c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6s18 8.059 18 18Z"
          />
        </svg>
      </div>
      <div
        class="arco-picker-input arco-picker-input-active"
      >
        <input
          placeholder="开始时间"
          value=""
        />
      </div>
      <span
        class="arco-picker-separator"
      >
        -
      </span>
      <div
        class="arco-picker-input"
      >
        <input
          placeholder="结束时间"
          value=""
        />
      </div>
      <div
        class="arco-picker-suffix"
      >
        <span
          class="arco-picker-suffix-icon"
        >
          <svg
            aria-hidden="true"
            class="arco-icon arco-icon-clock-circle"
            fill="none"
            focusable="false"
            stroke="currentColor"
            stroke-width="4"
            viewBox="0 0 48 48"
          >
            <path
              d="M24 14v10h9.5m8.5 0c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6s18 8.059 18 18Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders TimePicker/demo/rangepicker.md correctly 1`] = `
<div
  class="arco-picker arco-picker-range arco-picker-size-default"
  style="width:252px"
>
  <div
    class="arco-picker-input arco-picker-input-active"
  >
    <input
      placeholder="开始时间"
      value=""
    />
  </div>
  <span
    class="arco-picker-separator"
  >
    -
  </span>
  <div
    class="arco-picker-input"
  >
    <input
      placeholder="结束时间"
      value=""
    />
  </div>
  <div
    class="arco-picker-suffix"
  >
    <span
      class="arco-picker-suffix-icon"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-clock-circle"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="M24 14v10h9.5m8.5 0c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6s18 8.059 18 18Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`renders TimePicker/demo/size.md correctly 1`] = `
<div>
  <div
    class="arco-radio-group arco-radio-group-type-button arco-radio-size-default arco-radio-mode-outline"
    role="radiogroup"
    style="margin-bottom:24px"
  >
    <label
      class="arco-radio-button"
    >
      <input
        type="radio"
        value="large"
      />
      <span
        class="arco-radio-button-inner"
      >
        large
      </span>
    </label>
    <label
      class="arco-radio-button arco-radio-checked"
    >
      <input
        checked=""
        type="radio"
        value="default"
      />
      <span
        class="arco-radio-button-inner"
      >
        default
      </span>
    </label>
    <label
      class="arco-radio-button"
    >
      <input
        type="radio"
        value="small"
      />
      <span
        class="arco-radio-button-inner"
      >
        small
      </span>
    </label>
    <label
      class="arco-radio-button"
    >
      <input
        type="radio"
        value="mini"
      />
      <span
        class="arco-radio-button-inner"
      >
        mini
      </span>
    </label>
  </div>
  <br />
  <div
    class="arco-picker arco-picker-size-default"
    style="width:194px"
  >
    <div
      class="arco-picker-input"
    >
      <input
        class="arco-picker-start-time"
        placeholder="请选择时间"
        value=""
      />
    </div>
    <div
      class="arco-picker-suffix"
    >
      <span
        class="arco-picker-suffix-icon"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-clock-circle"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M24 14v10h9.5m8.5 0c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6s18 8.059 18 18Z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders TimePicker/demo/status.md correctly 1`] = `
<div>
  <div
    class="arco-space arco-space-horizontal arco-space-align-center arco-space-wrap"
  >
    <div
      class="arco-space-item"
      style="margin-right:8px;margin-bottom:8px"
    >
      <div
        class="arco-picker arco-picker-size-default arco-picker-error"
        style="width:200px"
      >
        <div
          class="arco-picker-input"
        >
          <input
            class="arco-picker-start-time"
            placeholder="error status"
            value=""
          />
        </div>
        <div
          class="arco-picker-suffix"
        >
          <span
            class="arco-picker-suffix-icon"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-clock-circle"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M24 14v10h9.5m8.5 0c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6s18 8.059 18 18Z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="arco-space-item"
      style="margin-bottom:8px"
    >
      <div
        class="arco-picker arco-picker-range arco-picker-size-default arco-picker-error"
        style="width:250px"
      >
        <div
          class="arco-picker-input arco-picker-input-active"
        >
          <input
            placeholder="error status"
            value=""
          />
        </div>
        <span
          class="arco-picker-separator"
        >
          -
        </span>
        <div
          class="arco-picker-input"
        >
          <input
            placeholder="error status"
            value=""
          />
        </div>
        <div
          class="arco-picker-suffix"
        >
          <span
            class="arco-picker-suffix-icon"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-clock-circle"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M24 14v10h9.5m8.5 0c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6s18 8.059 18 18Z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <br />
  <div
    class="arco-space arco-space-horizontal arco-space-align-center arco-space-wrap"
  >
    <div
      class="arco-space-item"
      style="margin-right:8px;margin-bottom:8px"
    >
      <div
        class="arco-picker arco-picker-size-default arco-picker-warning"
        style="width:200px"
      >
        <div
          class="arco-picker-input"
        >
          <input
            class="arco-picker-start-time"
            placeholder="warning status"
            value=""
          />
        </div>
        <div
          class="arco-picker-suffix"
        >
          <span
            class="arco-picker-suffix-icon"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-clock-circle"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M24 14v10h9.5m8.5 0c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6s18 8.059 18 18Z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="arco-space-item"
      style="margin-bottom:8px"
    >
      <div
        class="arco-picker arco-picker-range arco-picker-size-default arco-picker-warning"
        style="width:250px"
      >
        <div
          class="arco-picker-input arco-picker-input-active"
        >
          <input
            placeholder="warning status"
            value=""
          />
        </div>
        <span
          class="arco-picker-separator"
        >
          -
        </span>
        <div
          class="arco-picker-input"
        >
          <input
            placeholder="warning status"
            value=""
          />
        </div>
        <div
          class="arco-picker-suffix"
        >
          <span
            class="arco-picker-suffix-icon"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-clock-circle"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M24 14v10h9.5m8.5 0c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6s18 8.059 18 18Z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders TimePicker/demo/step.md correctly 1`] = `
<div
  class="arco-picker arco-picker-size-default"
  style="width:194px"
>
  <div
    class="arco-picker-input"
  >
    <input
      class="arco-picker-start-time"
      placeholder="请选择时间"
      value="10:25:30"
    />
  </div>
  <div
    class="arco-picker-suffix"
  >
    <span
      class="arco-icon-hover arco-picker-icon-hover arco-picker-clear-icon"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-close"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"
        />
      </svg>
    </span>
    <span
      class="arco-picker-suffix-icon"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-clock-circle"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="M24 14v10h9.5m8.5 0c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6s18 8.059 18 18Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`renders TimePicker/demo/timezone.md correctly 1`] = `
<div
  class="arco-space arco-space-vertical"
>
  <div
    class="arco-space-item"
    style="margin-bottom:8px"
  >
    <div
      class="arco-space arco-space-horizontal arco-space-align-center"
    >
      <div
        class="arco-space-item"
        style="margin-right:8px"
      >
        <div
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="listbox"
          class="arco-select arco-select-single arco-select-size-default"
          role="combobox"
          tabindex="0"
        >
          <div
            class="arco-select-view"
            title="Asia/Shanghai"
          >
            <span
              class="arco-select-view-selector"
            >
              <input
                aria-hidden="true"
                autocomplete="off"
                class="arco-select-view-input arco-select-hidden"
                style="width:100%;pointer-events:none"
                tabindex="-1"
                value=""
              />
              <span
                class="arco-select-view-value"
              >
                Asia/Shanghai
              </span>
            </span>
            <div
              aria-hidden="true"
              class="arco-select-suffix"
            >
              <div
                class="arco-select-arrow-icon"
              >
                <svg
                  aria-hidden="true"
                  class="arco-icon arco-icon-down"
                  fill="none"
                  focusable="false"
                  stroke="currentColor"
                  stroke-width="4"
                  viewBox="0 0 48 48"
                >
                  <path
                    d="M39.6 17.443 24.043 33 8.487 17.443"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="arco-space-item"
      >
        <div
          class="arco-picker arco-picker-size-default"
        >
          <div
            class="arco-picker-input"
          >
            <input
              class="arco-picker-start-time"
              placeholder="请选择时间"
              value="08:00:00"
            />
          </div>
          <div
            class="arco-picker-suffix"
          >
            <span
              class="arco-icon-hover arco-picker-icon-hover arco-picker-clear-icon"
            >
              <svg
                aria-hidden="true"
                class="arco-icon arco-icon-close"
                fill="none"
                focusable="false"
                stroke="currentColor"
                stroke-width="4"
                viewBox="0 0 48 48"
              >
                <path
                  d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"
                />
              </svg>
            </span>
            <span
              class="arco-picker-suffix-icon"
            >
              <svg
                aria-hidden="true"
                class="arco-icon arco-icon-clock-circle"
                fill="none"
                focusable="false"
                stroke="currentColor"
                stroke-width="4"
                viewBox="0 0 48 48"
              >
                <path
                  d="M24 14v10h9.5m8.5 0c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6s18 8.059 18 18Z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="arco-space-item"
  >
    <div
      class="arco-alert arco-alert-info"
      role="alert"
    >
      <div
        class="arco-alert-content-wrapper"
      >
        <div
          class="arco-alert-content"
        >
          <div
            class="arco-space arco-space-vertical"
          >
            <div
              class="arco-space-item"
              style="margin-bottom:8px"
            >
              <div>
                <span
                  class="arco-typography"
                >
                  <b>
                    Locale String:
                  </b>
                </span>
                 2/22/2022, 8:00:00 AM
              </div>
            </div>
            <div
              class="arco-space-item"
              style="margin-bottom:8px"
            >
              <div>
                <span
                  class="arco-typography"
                >
                  <b>
                    ISO String:
                  </b>
                </span>
                 2022-02-22T00:00:00.000Z
              </div>
            </div>
            <div
              class="arco-space-item"
            >
              <div>
                <span
                  class="arco-typography"
                >
                  <b>
                    Timestamp:
                  </b>
                </span>
                 1645488000000
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders TimePicker/demo/use-12-hours.md correctly 1`] = `
<div>
  <div
    class="arco-picker arco-picker-size-default"
    style="width:194px;margin:0 24px 24px 0"
  >
    <div
      class="arco-picker-input"
    >
      <input
        class="arco-picker-start-time"
        placeholder="请选择时间"
        value="12:20:20 凌晨"
      />
    </div>
    <div
      class="arco-picker-suffix"
    >
      <span
        class="arco-icon-hover arco-picker-icon-hover arco-picker-clear-icon"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-close"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"
          />
        </svg>
      </span>
      <span
        class="arco-picker-suffix-icon"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-clock-circle"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M24 14v10h9.5m8.5 0c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6s18 8.059 18 18Z"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    class="arco-picker arco-picker-size-default"
    style="width:194px;margin:0 24px 24px 0"
  >
    <div
      class="arco-picker-input"
    >
      <input
        class="arco-picker-start-time"
        placeholder="请选择时间"
        value="09:20:20 晚上"
      />
    </div>
    <div
      class="arco-picker-suffix"
    >
      <span
        class="arco-icon-hover arco-picker-icon-hover arco-picker-clear-icon"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-close"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"
          />
        </svg>
      </span>
      <span
        class="arco-picker-suffix-icon"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-clock-circle"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M24 14v10h9.5m8.5 0c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6s18 8.059 18 18Z"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    class="arco-picker arco-picker-size-default"
    style="width:194px;margin:0 24px 24px 0"
  >
    <div
      class="arco-picker-input"
    >
      <input
        class="arco-picker-start-time"
        placeholder="请选择时间"
        value="2:20 凌晨"
      />
    </div>
    <div
      class="arco-picker-suffix"
    >
      <span
        class="arco-icon-hover arco-picker-icon-hover arco-picker-clear-icon"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-close"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"
          />
        </svg>
      </span>
      <span
        class="arco-picker-suffix-icon"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-clock-circle"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M24 14v10h9.5m8.5 0c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6s18 8.059 18 18Z"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    class="arco-picker arco-picker-range arco-picker-size-default"
    style="width:300px;margin:0 24px 24px 0"
  >
    <div
      class="arco-picker-input arco-picker-input-active"
    >
      <input
        placeholder="开始时间"
        value="12:20:20 凌晨"
      />
    </div>
    <span
      class="arco-picker-separator"
    >
      -
    </span>
    <div
      class="arco-picker-input"
    >
      <input
        placeholder="结束时间"
        value="08:30:30 晚上"
      />
    </div>
    <div
      class="arco-picker-suffix"
    >
      <span
        class="arco-icon-hover arco-picker-icon-hover arco-picker-clear-icon"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-close"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"
          />
        </svg>
      </span>
      <span
        class="arco-picker-suffix-icon"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-clock-circle"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M24 14v10h9.5m8.5 0c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6s18 8.059 18 18Z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders TimePicker/demo/utcOffset.md correctly 1`] = `
<div
  class="arco-space arco-space-vertical"
>
  <div
    class="arco-space-item"
    style="margin-bottom:8px"
  >
    <div
      class="arco-space arco-space-horizontal arco-space-align-center"
    >
      <div
        class="arco-space-item"
        style="margin-right:8px"
      >
        <div
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="listbox"
          class="arco-select arco-select-single arco-select-size-default"
          role="combobox"
          tabindex="0"
        >
          <div
            class="arco-select-view"
            title="UTC "
          >
            <span
              class="arco-select-view-selector"
            >
              <input
                aria-hidden="true"
                autocomplete="off"
                class="arco-select-view-input arco-select-hidden"
                style="width:100%;pointer-events:none"
                tabindex="-1"
                value=""
              />
              <span
                class="arco-select-view-value"
              >
                UTC 
              </span>
            </span>
            <div
              aria-hidden="true"
              class="arco-select-suffix"
            >
              <div
                class="arco-select-arrow-icon"
              >
                <svg
                  aria-hidden="true"
                  class="arco-icon arco-icon-down"
                  fill="none"
                  focusable="false"
                  stroke="currentColor"
                  stroke-width="4"
                  viewBox="0 0 48 48"
                >
                  <path
                    d="M39.6 17.443 24.043 33 8.487 17.443"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="arco-space-item"
      >
        <div
          class="arco-picker arco-picker-size-default"
        >
          <div
            class="arco-picker-input"
          >
            <input
              class="arco-picker-start-time"
              placeholder="请选择时间"
              value="00:00:00"
            />
          </div>
          <div
            class="arco-picker-suffix"
          >
            <span
              class="arco-icon-hover arco-picker-icon-hover arco-picker-clear-icon"
            >
              <svg
                aria-hidden="true"
                class="arco-icon arco-icon-close"
                fill="none"
                focusable="false"
                stroke="currentColor"
                stroke-width="4"
                viewBox="0 0 48 48"
              >
                <path
                  d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"
                />
              </svg>
            </span>
            <span
              class="arco-picker-suffix-icon"
            >
              <svg
                aria-hidden="true"
                class="arco-icon arco-icon-clock-circle"
                fill="none"
                focusable="false"
                stroke="currentColor"
                stroke-width="4"
                viewBox="0 0 48 48"
              >
                <path
                  d="M24 14v10h9.5m8.5 0c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6s18 8.059 18 18Z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="arco-space-item"
  >
    <div
      class="arco-alert arco-alert-info"
      role="alert"
    >
      <div
        class="arco-alert-content-wrapper"
      >
        <div
          class="arco-alert-content"
        >
          <div
            class="arco-space arco-space-vertical"
          >
            <div
              class="arco-space-item"
              style="margin-bottom:8px"
            >
              <div>
                <span
                  class="arco-typography"
                >
                  <b>
                    Locale String:
                  </b>
                </span>
                 2/22/2022, 8:00:00 AM
              </div>
            </div>
            <div
              class="arco-space-item"
              style="margin-bottom:8px"
            >
              <div>
                <span
                  class="arco-typography"
                >
                  <b>
                    ISO String:
                  </b>
                </span>
                 2022-02-22T00:00:00.000Z
              </div>
            </div>
            <div
              class="arco-space-item"
            >
              <div>
                <span
                  class="arco-typography"
                >
                  <b>
                    Timestamp:
                  </b>
                </span>
                 1645488000000
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
